fix: tooltip overflow
MANAGER-8035

--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/replications/add-edit/add-edit.scss
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/replications/add-edit/add-edit.scss
@@ -1,4 +1,4 @@
-ovh-manager-pci-project-database-replications-add-edit {
+ovh-manager-pci-project-database-replications-add-edit-component {
   .oui-popover {
     max-width: fit-content;
     white-space: pre-line;
